# monarch-cli-sync

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-testing.md
monarch_cli_sync/: __init__.py  cli.py  config.py  status.py
monarch_cli_sync/amazon/: orders.py  session.py
monarch_cli_sync/monarch/: session.py  transactions.py
monarch_cli_sync/sync/: matcher.py  runner.py
plans/: application.md  test-coverage.md
tests/: conftest.py  test_amazon_html_parsing.py  test_amazon_orders.py  test_amazon_session.py  test_cli.py  test_cli_amazon.py  test_cli_monarch.py  test_config.py  test_config_multi_account.py  test_e2e_api_recording.py  test_matcher.py  test_monarch_session.py  test_monarch_transactions.py  test_phase5_cron_polish.py  test_runner.py  test_status.py  test_vcr_config.py
tests/cassettes/: e2e_amazon_auth_and_orders.yaml  e2e_monarch_auth_and_transactions.yaml
tests/fixtures/amazon/: order_history_2024.html
