[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monarch-cli-sync"
version = "0.1.0"
description = "Sync Amazon order history into Monarch Money without a browser extension"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "amazon-orders @ git+https://github.com/blytheaw/amazon-orders.git@2ce5e4920cf5e14eba0aa594aaf979e1243ddbd2",
    "2captcha-python>=1.0",
    "monarchmoney>=0.1",
    "gql<4.0",  # monarchmoney 0.1.15 is not compatible with gql 4.0
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "responses>=0.25",
    "pytest-cov>=5.0",
    "vcrpy>=4.3",
    "pytest-recording>=0.13",
]

[project.scripts]
monarch-cli-sync = "monarch_cli_sync.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default to fully offline runs. `--block-network` (pytest-recording) makes any
# accidental real socket fail loudly; `--record-mode=none` makes any cassette
# miss fail loudly instead of silently recording. Re-record explicitly with:
#   pytest --record-mode=all -m e2e        (refresh all cassettes)
#   pytest --record-mode=once <test_path>  (record a single missing cassette)
addopts = "--block-network --record-mode=none"
markers = [
    "e2e: real API tests recorded/replayed with VCR cassettes",
]

[tool.hatch.metadata]
# Required because amazon-orders is pinned to a fork commit via git URL
# until alexdlaird/amazon-orders#72 ships in a tagged release.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["monarch_cli_sync"]
